--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -18,7 +18,7 @@ jobs:
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml@master
     with:      
       solution_name: ${{ matrix.target }}
-      branch_name: develop
+      branch_name: solution
       solution_exported_folder: out/exported/
       solution_folder: out/solutions/
       solution_target_folder: solutions/
@@ -37,7 +37,7 @@ jobs:
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml@master
     with:
       solution_name: ${{ matrix.target }}
-      branch_name: develop
+      branch_name: solution
       solution_shipping_folder: out/ship/
       solution_outbound_folder: out/solutions/
       solution_source_folder: solutions/
