--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
@@ -58,6 +58,11 @@ jobs:
         lfs: true
         ref: develop
         
+    - name: merge pull request
+      run: gh pr merge
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: pack solution
       uses: microsoft/powerplatform-actions/pack-solution@v0
       with:
