--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
@@ -56,7 +56,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         lfs: true
-        ref: develop
+        ref: ${{ inputs.branch_name }}-${{ inputs.solution_name }}
 
     - name: pack solution
       uses: microsoft/powerplatform-actions/pack-solution@v0
