--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
+        target: [EQL10WebResources]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml@master
     with:      
       solution_name: ${{ matrix.target }}
@@ -32,7 +32,7 @@ jobs:
     strategy:
         max-parallel: 1
         matrix:
-          target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
+          target: [EQL10WebResources]
     needs: [ build ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml@master
     with:
@@ -69,7 +69,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
+        target: [EQL10WebResources]
     needs: [ approval-to-deploy-to-sit-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml@master
     with:
@@ -102,7 +102,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
+        target: [EQL10WebResources]
     needs: [ approval-to-deploy-to-data-migration-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_data_migration_env.yml@master
     with:
@@ -135,7 +135,7 @@ jobs:
       strategy:
         max-parallel: 1
         matrix:
-          target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
+          target: [EQL10WebResources]
       needs: [ approval-to-deploy-to-uat-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_uat_env.yml@master
       with:
@@ -168,7 +168,7 @@ jobs:
       strategy:
         max-parallel: 1
         matrix:
-          target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
+          target: [EQL10WebResources]
       needs: [ approval-to-deploy-to-prod-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_prod_env.yml@master
       with:
