--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -54,6 +54,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           lfs: true
+          
+      - name: check-solution
+        uses: microsoft/powerplatform-actions/check-solution@v0
+        with:
+          environment-url: ${{ secrets.dev_url }}
+          app-id: ${{ secrets.dev_client_id }}
+          client-secret: ${{ secrets.dev_secrets_id }}
+          tenant-id: ${{ secrets.tenant_id }}  
+          path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
+          geo: Australia
 
       - name: export solution from dev
         uses: microsoft/powerplatform-actions/export-solution@v0
