--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -63,7 +63,7 @@ jobs:
           client-secret: ${{ secrets.dev_secrets_id }}
           tenant-id: ${{ secrets.tenant_id }}  
           path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
-          geo: Australia
+          geo: UnitedStates
 
       - name: export solution from dev
         uses: microsoft/powerplatform-actions/export-solution@v0
