--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -56,17 +56,14 @@ jobs:
           lfs: true
           
       - name: powerapps-checker
-        uses: rajyraman/powerapps-checker@v1.4
+        uses: microsoft/powerplatform-actions/check-solution@v0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: develop
-          solutionName: ${{ inputs.solution_name }}
-          sourceEnvironmentUrl: ${{ secrets.dev_url }}
-          applicationId: ${{ secrets.tenant_id }}  
-          applicationSecret: ${{ secrets.dev_secrets_id }}
-          tenantId: ${{ secrets.dev_client_id }}
-          geography: 'UnitedStates'
-          saveResults: true
+          environment-url: ${{ secrets.dev_url }}
+          app-id: ${{ secrets.dev_client_id }}
+          client-secret: ${{ secrets.dev_secrets_id }}
+          tenant-id: ${{ secrets.tenant_id }}  
+          path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
+          geo: 'united states'
           
       - name: export solution from dev
         uses: microsoft/powerplatform-actions/export-solution@v0
