--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -28,6 +28,27 @@ jobs:
       tenant_id: ${{ secrets.tenant_id }}  
       dev_secrets_id: ${{ secrets.dev_secrets_id }}
 
+  download-portal-data:
+    needs: [ build ]
+    runs-on: ubuntu-latest
+    env:
+      RUNNER_DEBUG: 1
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          lfs: true
+          
+      - name: powerapps-checker
+        uses: microsoft/powerplatform-actions/check-solution@v0
+        with:
+          environment-url: ${{ secrets.dev_url }}
+          app-id: ${{ secrets.dev_client_id }}
+          client-secret: ${{ secrets.dev_secrets_id }}
+          tenant-id: ${{ secrets.tenant_id }}  
+          download-path: ${{ secrets.dev_url }}
+          website-id: 'dd7f978e-c24e-ed11-bba1-000d3a35cd77'
+          
+          
   release-to-build-env:
     strategy:
         max-parallel: 1
@@ -49,7 +70,7 @@ jobs:
       tenant_id: ${{ secrets.tenant_id }}
 
   approval-to-deploy-to-sit-env:
-    needs: [ release-to-build-env ]
+    needs: [ release-to-build-env, download-portal-data] 
     runs-on: ubuntu-latest
     env:
       RUNNER_DEBUG: 1
