--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -31,6 +31,7 @@ jobs:
   download-portal-data:
     needs: [ build ]
     runs-on: ubuntu-latest
+    environment: dev
     env:
       RUNNER_DEBUG: 1
     steps:
