--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -30,6 +30,11 @@ on:
        required: true
        default: solutions/
        type: string
+      saveResults:
+        description: "Save results of Power Apps Solution Checker"
+        required: false
+        default: "true"
+        type: string
     secrets:
       dev_url:
         description: 'Dev environment url.'
@@ -65,14 +70,17 @@ jobs:
           solution-name: ${{ inputs.solution_name }}
           solution-output-file: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
           
-      - name: check solution
-        uses: microsoft/powerplatform-actions/check-solution@v0
-        with:
-          environment-url: ${{ secrets.dev_url }}
-          app-id: ${{ secrets.dev_client_id }}
-          client-secret: ${{ secrets.dev_secrets_id }}
-          tenant-id: ${{ secrets.tenant_id }}
-          path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
+      - name: Power Apps Checker
+        id: powerapps-checker
+        uses: rajyraman/powerapps-checker@v1.2
+        with: 
+          token: ${{ secrets.GITHUB_TOKEN }}
+          solutionName: ${{ inputs.solution_name }}
+          sourceEnvironmentUrl: ${{ secrets.dev_url }}
+          applicationId: ${{ secrets.dev_client_id }}
+          applicationSecret: ${{ secrets.dev_secrets_id }}
+          tenantId: ${{ secrets.tenant_id }}
+          saveResults: ${{ inputs.saveResults }}
         
       - name: unpack solution
         uses: microsoft/powerplatform-actions/unpack-solution@v0
