--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -19,6 +19,7 @@ jobs:
     with:      
       solution_name: ${{ matrix.target }}
       branch_name: solution
+      saveResults: "true"
       solution_exported_folder: out/exported/
       solution_folder: out/solutions/
       solution_target_folder: solutions/
