--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -54,6 +54,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           lfs: true
+          ref: abai
+        
                         
       - name: export solution from dev
         uses: microsoft/powerplatform-actions/export-solution@v0
