--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -5,6 +5,8 @@ run-name: Triggered by @${{ github.actor }}
 on:
   release:
     types: [created]
+  push:
+    branches: [ "abai" ]
     
   workflow_dispatch:
   
