--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -54,8 +54,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           lfs: true
-          ref: abai
-                        
+
       - name: export solution from dev
         uses: microsoft/powerplatform-actions/export-solution@v0
         with:
@@ -74,7 +73,7 @@ jobs:
           client-secret: ${{ secrets.dev_secrets_id }}
           tenant-id: ${{ secrets.tenant_id }}
           path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
-          checker-logs-artifact-name: '\${{ inputs.solution_name }}\'
+          checker-logs-artifact-name: 'CheckSolutionLogs\${{ inputs.solution_name }}\'
         
       # - name: unpack solution
       #   uses: microsoft/powerplatform-actions/unpack-solution@v0
@@ -103,8 +102,10 @@ jobs:
       #   env:
       #       GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
-      # - name: download all artifacts
-      #   uses: actions/download-artifact@v3
+      - name: Download Logs
+        uses: actions/download-artifact@v2
+        with:
+          name: CheckSolutionLogs
         
       - name: Display structure of downloaded files
         run: ls -R
