--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -106,7 +106,22 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: ${{ inputs.solution_name }}
+
+      - name: merge pull requests
+        run: |
+          git --version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git fetch --no-tags --prune --depth=1 origin
           
+          gh add ${{ inputs.solution_name }}
+          git commit
+          git push
+
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+      
         
       - name: Display structure of downloaded files
         run: ls -R
