--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -107,7 +107,7 @@ jobs:
         with:
           name: ${{ inputs.solution_name }}
 
-      - name: merge pull requests
+      - name: push logs
         run: |
           git --version
           git config user.name "GitHub Actions Bot"
