--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -73,7 +73,7 @@ jobs:
           client-secret: ${{ secrets.dev_secrets_id }}
           tenant-id: ${{ secrets.tenant_id }}
           path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
-          checker-logs-artifact-name: ${{ inputs.solution_name }}
+          checker-logs-artifact-name: logs
         
       # - name: unpack solution
       #   uses: microsoft/powerplatform-actions/unpack-solution@v0
@@ -105,7 +105,7 @@ jobs:
       - name: Download Logs
         uses: actions/download-artifact@v2
         with:
-          name: ${{ inputs.solution_name }}
+          name: logs
 
       - name: push logs
         run: |
@@ -114,8 +114,10 @@ jobs:
           git config user.email "<>"
           git fetch --no-tags --prune --depth=1 origin
           git log --pretty=format: --name-only --diff-filter=A  | sort -u
-          
-          git add add ${{ inputs.solution_name }}
+          git checkout -b develop
+          fs.emptyDirSync(${{ inputs.solution_folder}}/${{ inputs.solution_name }})/logs
+          fs.copySync('logs', '${{ inputs.solution_folder}}/${{ inputs.solution_name }}/logs')
+          git add ${{ inputs.solution_folder}}/${{ inputs.solution_name }}/logs
           git commit
           git push
 
