--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Download Logs
         uses: actions/download-artifact@v2
         with:
-          name: logs
+          name: logs/${{ inputs.solution_name }}
 
       - name: push logs
         run: |
@@ -116,7 +116,7 @@ jobs:
           git log --pretty=format: --name-only --diff-filter=A  | sort -u
           git checkout -b develop
           fs.emptyDirSync(${{ inputs.solution_folder}}/${{ inputs.solution_name }}/logs)
-          fs.copySync('logs', '${{ inputs.solution_folder}}/${{ inputs.solution_name }}/logs')
+          fs.copySync(logs/${{ inputs.solution_name }}, ${{ inputs.solution_folder}}/${{ inputs.solution_name }}/logs)
           git add ${{ inputs.solution_folder}}/${{ inputs.solution_name }}/logs
           git commit
           git push
