--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -115,8 +115,8 @@ jobs:
           git fetch --no-tags --prune --depth=1 origin
           git log --pretty=format: --name-only --diff-filter=A  | sort -u
           git checkout -b develop
-          fs.emptyDirSync('${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs')
-          fs.copySync('logs-${{ inputs.solution_name }}', '${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs')
+          mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
+          copy logs-${{ inputs.solution_name }} ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
           git add ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
           git commit
           git push
