--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -107,6 +107,7 @@ jobs:
         with:
           name: ${{ inputs.solution_name }}
 
+
       - name: push logs
         run: |
           git --version
@@ -115,6 +116,7 @@ jobs:
           git fetch --no-tags --prune --depth=1 origin
           git status
           git log --pretty=format: --name-only --diff-filter=A  | sort -u
+          dir
           mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
           copy ${{ inputs.solution_name }} ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
           git add ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
