--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -73,7 +73,7 @@ jobs:
           client-secret: ${{ secrets.dev_secrets_id }}
           tenant-id: ${{ secrets.tenant_id }}
           path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
-          checker-logs-artifact-name: CheckSolutionLogs
+          checker-logs-artifact-name: ${{ inputs.solution_name }}
         
       - name: unpack solution
         uses: microsoft/powerplatform-actions/unpack-solution@v0
@@ -102,9 +102,27 @@ jobs:
         env:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
-      - name: download all artifacts
-        uses: actions/download-artifact@v3
-        
+      - name: download check-solution logs
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ inputs.solution_name }}
+          path: logs/${{ inputs.solution_name }}
+          
+      - name: push check-solution logs to branch
+        run: |
+          git --version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git fetch --no-tags --prune --depth=1 origin
+          mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
+          copy logs/${{ inputs.solution_name }} ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
+          git add logs
+          git pull origin
+          git commit -m "Added Logs to branch"
+          git push
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
       - name: Display structure of downloaded files
         run: ls -R
       
