--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -114,12 +114,13 @@ jobs:
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git fetch --no-tags --prune --depth=1 origin
+          git checkout develop
           mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
           copy logs/${{ inputs.solution_name }} ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
           git add logs
           git pull origin
           git commit -m "Added Logs to branch"
-          git push develop
+          git push
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
