--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -69,7 +69,26 @@ jobs:
       build_client_id: ${{ secrets.build_client_id }}
       build_secrets_id: ${{ secrets.build_secrets_id }}
       tenant_id: ${{ secrets.tenant_id }}
-
+      
+  release-paportaldata-to-build-env:
+      needs: [ download-portal-data ]
+      runs-on: ubuntu-latest
+      environment: build
+      env:
+        RUNNER_DEBUG: 1
+      steps:
+        - uses: actions/checkout@v3
+          with:
+            lfs: true
+        - name: upload-paportal
+          uses: microsoft/powerplatform-actions/upload-paportal@v0
+          with:
+            environment-url: ${{ secrets.build_url }}
+            app-id: ${{ secrets.build_client_id }}
+            client-secret: ${{ secrets.build_secrets_id }}
+            tenant-id: ${{ secrets.tenant_id }}
+            upload-path: ${{ secrets.build_url }}
+           
   release-to-sit-env:
     strategy:
       max-parallel: 1
@@ -85,6 +104,25 @@ jobs:
       sit_client_id: ${{ secrets.sit_client_id }}
       sit_secrets_id: ${{ secrets.sit_secrets_id }}
       tenant_id: ${{ secrets.tenant_id }}
+      
+  release-paportaldata-to-sit-env:
+      needs: [ release-paportaldata-to-build-env ]
+      runs-on: ubuntu-latest
+      environment: build
+      env:
+        RUNNER_DEBUG: 1
+      steps:
+        - uses: actions/checkout@v3
+          with:
+            lfs: true
+        - name: upload-paportal
+          uses: microsoft/powerplatform-actions/upload-paportal@v0
+          with:
+            environment-url: ${{ secrets.build_url }}
+            app-id: ${{ secrets.build_client_id }}
+            client-secret: ${{ secrets.build_secrets_id }}
+            tenant-id: ${{ secrets.tenant_id }}
+            upload-path: ${{ secrets.build_url }}    
 
   release-to-data-migration-env:
     strategy:
