--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -3,13 +3,22 @@ name: eql_cmx_portal_cicd_download_upload_portal_data_pipeline
 on:
   workflow_call :
     secrets:
-      portal_data_url:
+      dev_url:
         description: 'portal_data environment url.'
         required: true      
-      portal_data_client_id:
+      dev_client_id:
         description: 'The portal_data client id'
         required: true
-      portal_data_secrets_id:
+      dev_secrets_id:
+        description: 'The secret value for authentication for portal_data'
+        required: true
+      build_url:
+        description: 'portal_data environment url.'
+        required: true      
+      build_client_id:
+        description: 'The portal_data client id'
+        required: true
+      build_secrets_id:
         description: 'The secret value for authentication for portal_data'
         required: true
       tenant_id: 
@@ -20,6 +29,7 @@ on:
 jobs:
   download-upload-portal-data:
     runs-on:  ubuntu-latest
+    environment: dev
     env:
       RUNNER_DEBUG: 1
     steps:
@@ -30,20 +40,30 @@ jobs:
     - name: download-paportal
       uses: microsoft/powerplatform-actions/download-paportal@v0
       with:
-        environment-url: ${{ secrets.portal_data_url }}
-        app-id: ${{ secrets.portal_data_client_id }}
-        client-secret: ${{ secrets.portal_data_secrets_id }}
+        environment-url: ${{ secrets.dev_url }}
+        app-id: ${{ secrets.dev_client_id }}
+        client-secret: ${{ secrets.dev_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        download-path: ${{ secrets.portal_data_url }}
+        download-path: ${{ secrets.dev_url }}
         website-id: 'dd7f978e-c24e-ed11-bba1-000d3a35cd77'
         working-directory: CMX-Pipeline/eql_cmx_portal_cicd_repository_/develop
         
+
+  download-upload-portal-datas:
+    runs-on:  ubuntu-latest
+    environment: build
+    env:
+      RUNNER_DEBUG: 1
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        lfs: true        
     - name: upload-paportal
       uses: microsoft/powerplatform-actions/upload-paportal@v0
       with:
-        environment-url: ${{ secrets.portal_data_url }}
-        app-id: ${{ secrets.portal_data_client_id }}
-        client-secret: ${{ secrets.portal_data_secrets_id }}
+        environment-url: ${{ secrets.build_url }}
+        app-id: ${{ secrets.build_client_id }}
+        client-secret: ${{ secrets.build_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        download-path: ${{ secrets.portal_data_url }}
+        download-path: ${{ secrets.build_url }}
         
