--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -74,9 +74,12 @@ jobs:
     needs: [ release-to-build-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml@master
     secrets:
-      portal_data_url: ${{ secrets.build_url }}
-      portal_data_client_id: ${{ secrets.build_client_id }}
-      portal_data_secrets_id: ${{ secrets.build_secrets_id }}
+      dev_url: ${{ secrets.dev_url }}
+      dev_client_id: ${{ secrets.dev_client_id }}
+      dev_secrets_id: ${{ secrets.dev_secrets_id }}
+      build_url: ${{ secrets.build_url }}
+      build_client_id: ${{ secrets.build_client_id }}
+      build_secrets_id: ${{ secrets.build_secrets_id }}
       tenant-id: ${{ secrets.tenant_id }}    
          
   release-to-sit-env:
@@ -97,11 +100,14 @@ jobs:
     
   download-upload-portal-data-sit-env:
       needs: [ release-to-sit-env ]
-      uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml@master
+      uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml@master
       secrets:
-        portal_data_url: ${{ secrets.build_url }}
-        portal_data_client_id: ${{ secrets.build_client_id }}
-        portal_data_secrets_id: ${{ secrets.build_secrets_id }}
+        build_url: ${{ secrets.build_url }}
+        build_client_id: ${{ secrets.build_client_id }}
+        build_secrets_id: ${{ secrets.build_secrets_id }}
+        sit_url: ${{ secrets.sit_url }}
+        sit_client_id: ${{ secrets.sit_client_id }}
+        sit_secrets_id: ${{ secrets.sit_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}  
       
   release-to-data-migration-env:
