--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -66,5 +66,5 @@ jobs:
         app-id: ${{ secrets.build_client_id }}
         client-secret: ${{ secrets.build_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        download-path: ${{ secrets.build_url }}
-        
+        upload-path: ${{ secrets.build_url }}
+        working-directory: CMX-Pipeline/eql_cmx_portal_cicd_repository_/develop
