--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -46,25 +46,44 @@ jobs:
         tenant-id: ${{ secrets.tenant_id }}
         download-path: ${{ secrets.dev_url }}
         website-id: 'dd7f978e-c24e-ed11-bba1-000d3a35cd77'
-        working-directory: CMX-Pipeline/eql_cmx_portal_cicd_repository_/develop
+        working-directory: logs/portaldata
+        
+    - name: push check-solution logs to branch
+      run: |
+          git --version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git fetch --no-tags --prune --depth=1 origin
+          git checkout develop
+          mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
+          copy logs/${{ inputs.solution_name }} ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
+          git add logs
+          git pull origin
+          git commit -m "Added Logs to branch"
+          git push
+      env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+    - name: Display structure of downloaded files
+      run: ls -R
         
 
-  upload-portal-data-to-build-env:
-    needs: [ download-portal-data-from-dev-env ]
-    runs-on:  ubuntu-latest
-    environment: build
-    env:
-      RUNNER_DEBUG: 1
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        lfs: true        
-    - name: upload-paportal
-      uses: microsoft/powerplatform-actions/upload-paportal@v0
-      with:
-        environment-url: ${{ secrets.build_url }}
-        app-id: ${{ secrets.build_client_id }}
-        client-secret: ${{ secrets.build_secrets_id }}
-        tenant-id: ${{ secrets.tenant_id }}
-        upload-path: ${{ secrets.build_url }}
-        working-directory: CMX-Pipeline/eql_cmx_portal_cicd_repository_/develop
+  # upload-portal-data-to-build-env:
+  #  needs: [ download-portal-data-from-dev-env ]
+  #  runs-on:  ubuntu-latest
+  #  environment: build
+  #  env:
+  #    RUNNER_DEBUG: 1
+  #  steps:
+  #  - uses: actions/checkout@v3
+  #    with:
+  #      lfs: true        
+  #  - name: upload-paportal
+  #    uses: microsoft/powerplatform-actions/upload-paportal@v0
+  #    with:
+  #      environment-url: ${{ secrets.build_url }}
+  #      app-id: ${{ secrets.build_client_id }}
+  #      client-secret: ${{ secrets.build_secrets_id }}
+  #      tenant-id: ${{ secrets.tenant_id }}
+  #      upload-path: ${{ secrets.build_url }}
+  #      working-directory: CMX-Pipeline/eql_cmx_portal_cicd_repository_/develop
