--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL10WebResources]
+        target: [EQL20Customizing]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml@master
     with:      
       solution_name: ${{ matrix.target }}
@@ -32,7 +32,7 @@ jobs:
     strategy:
         max-parallel: 1
         matrix:
-          target: [EQL10WebResources]
+          target: [EQL20Customizing]
     needs: [ build ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml@master
     with:
@@ -64,7 +64,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL10WebResources]
+        target: [EQL20Customizing]
     needs: [ release-to-build-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml@master
     with:
@@ -92,7 +92,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL10WebResources]
+        target: [EQL20Customizing]
     needs: [ release-to-sit-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_data_migration_env.yml@master
     with:
@@ -108,7 +108,7 @@ jobs:
       strategy:
         max-parallel: 1
         matrix:
-          target: [EQL10WebResources]
+          target: [EQL20Customizing]
       needs: [ release-to-data-migration-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_uat_env.yml@master
       with:
@@ -124,7 +124,7 @@ jobs:
       strategy:
         max-parallel: 1
         matrix:
-          target: [EQL10WebResources]
+          target: [EQL20Customizing]
       needs: [ release-to-uat-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_prod_env.yml@master
       with:
