--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -28,7 +28,7 @@ on:
 
 jobs:
   download-portal-data-from-dev-env:
-    runs-on:  windows-latest
+    runs-on:  ubuntu-latest
     environment: dev
     env:
       RUNNER_DEBUG: 1
