--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -59,22 +59,23 @@ jobs:
         website-id: '5001a9ef-2555-ed11-bba2-000d3a34c578'
         working-directory: portaldata
         
-    # - name: push portal data to branch
-    #   run: |
-    #       git --version
-    #       git config user.name "GitHub Actions Bot"
-    #       git config user.email "<>"
-    #       git fetch --no-tags --prune --depth=1 origin
-    #       git checkout develop
-    #       ls
-    #       # mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
-    #       cp portaldata ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/data
-    #       git add logs
-    #       git pull origin
-    #       git commit -m "Added Logs to branch"
-    #       git push
-    #   env:
-    #       GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    - name: push portal data to branch
+      run: |
+          ls
+          git --version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git fetch --no-tags --prune --depth=1 origin
+          git checkout develop
+          
+          # mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
+          cp portaldata ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/data
+          git add logs
+          git pull origin
+          git commit -m "Added Logs to branch"
+          git push
+      env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
     - name: Display structure of downloaded files
       run: ls -R
