--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -66,8 +66,8 @@ jobs:
           git config user.email "<>"
           git fetch --no-tags --prune --depth=1 origin
           git checkout develop
-          mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/data
-          cp portaldata ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/data
+          mkdir data
+          cp portaldata data
           git add logs
           git pull origin
           git commit -m "Added Logs to branch"
